2002-01-28  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/project_dbase.c: App status bar now updates
	with the project name when the project is loaded.
	
2002-01-28  Naba Kumar <kh_naba@users.sourceforge.net>

	* scripts/anjuta_import.sh.in: Added file.
	* scripts/anjuta_import.sh: Removed file.

	* .cvsignore, po/.cvsignore, scripts/.cvsignore:
	  Updated files.
	  
	* src/main_menubar_def.h:
	
	  Changed shortcut for Find/Replace to CTRL+SHIFT+F (to
	  reflect the opposite of Find (CTRL+F) and also to leave
	  CTRL+R or Redo.
	  
	  Changed Glade summon with ALT+G, which frees the ATL+E
	  for poping up the edit menu.
	  
	* src/Makefile.am: Debugging link flags by Biswa, removed.

2002-01-28	Andy Piper	<andy.piper@freeuk.com>

	* HACKING: added information on best practices for writing
	  application messages and GUI labels
	  
	* src/CORBA-Server.c, src/about.c, src/anjuta.c, 
	  src/breakpoints.c, src/build_file.c, src/build_project.c, 
	  src/clean_project.c, src/compile.c, 
	  src/compiler_options_cbs.c, src/compiler_options_gui.c, 
	  src/configurer.c, src/debugger.c, src/executer.c, 
	  src/find_in_files.c, src/find_in_files_cbs.c, 
	  src/find_replace.c, src/find_text.c, src/glades.c, 
	  src/gnome_project.c, src/goto_line.c, src/main.c, 
	  src/main_menubar.c, src/main_menubar_def.h, 
	  src/mainmenu_callbacks.c, src/preferences_gui.c, 
	  src/project_config.c, src/project_dbase.c, 
	  src/project_dbase_gui.c, src/resources.c, src/source.c, 
	  src/support.c, src/tags_manager.c, src/text_editor.c, 
	  src/text_editor_gui.c, src/text_editor_menu.c, 
	  src/toolbar_callbacks.c, src/utilities.c: 
	  lots of minor message updates to make them more user-friendly 
	  and consistent

2002-01-28  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/executer.c:
	
	  Because of the spaces escaping, the command could not be
	  executed when run without terminal. Now fixed.
	  
	* anjuta.prj, Makefile.am:
	
	  Added anjuta project file.
	