@@ -52,6 +52,14 @@ static TMFileType tm_file_entry_type(const char *path)
 		return tm_file_unknown_t;
 }
 
+gint tm_file_entry_compare(gconstpointer a, gconstpointer b)
+{
+	TMFileEntry *tm_a, *tm_b;
+	tm_a = (TMFileEntry *)a;
+	tm_b = (TMFileEntry *)b;
+	return strcmp(tm_a->name, tm_b->name);
+}
+
 TMFileEntry *tm_file_entry_new(const char *path, TMFileEntry *parent
   , gboolean recurse, const char **match, const char **ignore
   , gboolean ignore_hidden)
@@ -155,7 +163,8 @@ TMFileEntry *tm_file_entry_new(const char *path, TMFileEntry *parent
 				new_entry = tm_file_entry_new(file_name, entry, TRUE, match
 				  , ignore, ignore_hidden);
 				if (new_entry)
-					entry->children = g_slist_append(entry->children, new_entry);
+					entry->children = g_slist_insert_sorted(entry->children, new_entry,
+										&tm_file_entry_compare);
 			}
 		}
 	}
