@@ -1,7 +1,12 @@
 2002-01-28  Naba Kumar <kh_naba@users.sourceforge.net>
 
 	* src/project_dbase.c: App status bar now updates
-	with the project name when the project is loaded.
+	  with the project name when the project is loaded.
+	
+	* src/an_file_view.c, tagmanager/tm_file_entry.c:
+	  
+	  Puts the directories at the top. They're also sorted now.
+	  Patch from: Dan Elphick <dre00r@ecs.soton.ac.uk>
 	
 2002-01-28  Naba Kumar <kh_naba@users.sourceforge.net>
 
